--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img id="profile-pic" src="assets/img/me.jpg" class="img-fluid" alt="">
+            <img id="profile-pic" src="assets/img/me.jpg" class="img-fluid" alt="Profile Picture">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Aspiring Art College Student</h3>
