Modified Image for User Email Template

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   Adriana Morales has been a dedicated participant in our community's art outreach program for high school students. Her volunteer work as a mentor and art teacher to underserved youth has been invaluable.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="Profile Picture">
                 <h3>Ryan Smith</h3>
                 <h4>High School Art Teacher</h4>
               </div>
