Modified User Email Template

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img id="profile-pic" src="assets/img/me.jpg" class="img-fluid" alt="Profile Picture">
+            <img id="profile-pic" src="assets/img/me.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Aspiring Art College Student</h3>
@@ -324,7 +324,7 @@
                   Adriana Morales has been a dedicated participant in our community's art outreach program for high school students. Her volunteer work as a mentor and art teacher to underserved youth has been invaluable.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="Profile Picture">
                 <h3>Ryan Smith</h3>
                 <h4>High School Art Teacher</h4>
               </div>
