Improved Image Responsiveness of Portfolio Details

--- a/index.html
+++ b/index.html
@@ -707,9 +707,9 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-10 col-md-6"></div>
-          <div class="col-lg-2 col-md-6 custom-right-align">
-            <a id="go-back-link" href="index.html#portfolio">
+          <div class="col-11"></div>
+          <div class="col-1">
+            <a id="go-back-link" class="float-right" href="index.html#portfolio">
               <svg id="exit-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                 <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
               </svg>
@@ -719,13 +719,13 @@
 
         <div class="row">
 
-          <div class="col">
+          <div class="col-lg-6 col-md-12">
             <h2 id="portfolio-title" class="portfolio-title"></h2>
             <div>
               <div>
 
                 <div>
-                  <img id="portfolio-image" src="" alt="Portfolio Image Project">
+                  <img id="portfolio-image" class="img-fluid" src="" alt="Portfolio Image Project">
                 </div>
 
               </div>
