--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
         <div class="row">
 
-          <div class="col">
+          <div class="col-lg-6 col-md-12">
             <h2 id="portfolio-title" class="portfolio-title"></h2>
             <div>
               <div>
@@ -733,7 +733,7 @@
 
           </div>
 
-          <div class="col portfolio-info">
+          <div class="col-lg-6 col-md-12 portfolio-info">
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: <span id="portfolio-category"></span></li>
